# agent-config-lint

./: .gitignore  .pre-commit-config.yaml  LICENSE  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: lint.yml
agent_config_lint/: cli.py
agent_config_lint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: github-auth.md  launch-kit.md  publish-helpers.md  release-v0.1.0.md  release.md  rules.md
examples/bad_workspace/: AGENTS.md  HEARTBEAT.md  TODO.md
examples/good_workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TODO.md  USER.md
rules/: default.json  openclaw.json
scripts/: check-github-auth-exit.sh  check-github-auth.sh  check-github-repo.sh  create-github-repo.sh  first-publish-check.sh  github-key-helper.sh  open-github-keys.sh  publish-auth-status.sh  publish-blockers-count.sh  publish-blockers-json.sh  publish-blockers-lines.sh  publish-blockers-shell.sh  publish-brief.sh  publish-check-all.sh  publish-cleanup.sh  publish-clipboard-note.sh  publish-dashboard.sh  publish-do-now.sh  publish-github.sh  publish-guided.sh  publish-help.sh  publish-human-steps.sh  publish-next-action.sh  publish-next-human-step.sh  publish-once.sh  publish-ready-bool.sh  publish-ready-exit.sh  publish-ready-int.sh  publish-ready-ja.sh  publish-ready-mark.sh  publish-ready-message.sh  publish-ready-upper.sh  publish-ready-yesno.sh  publish-report.sh  publish-short-ja.sh  publish-status-emoji.sh  publish-status-icon.sh  publish-status-ja.sh  publish-status-symbol.sh  publish-status.sh  (+4 more)
src/: main.py
tests/: test_smoke.py
